fix: 加固短信运行时状态与供应商重试处理 fix: 修复 provider 和 example 中批量手机号格式转换导致的编译错误 fix: 修复默认 YAML 模式下未配置 sms.config-type 时 blends Bean 缺失的问题 fix: 修复 SmsFactory 非原子注册和 SmsLoad 注销空值问题 fix: 修复重复初始化时同类代理处理器重复注册的问题 fix: 修复代理调用中反射异常未解包导致真实业务异常丢失的问题 fix: 修复 SmsHttpUtils 全局代理实例复用导致不同供应商代理配置冲突的问题 fix: 修复 HTTP 异常只保留 message 导致 cause 丢失的问题 fix: 修复 SmsUtils.addCodePrefixIfNot 会修改调用方手机号列表的问题 fix: 修复默认 DAO 在零缓存时间下仍可能读取到旧值的过期边界问题 fix: 修复短信和 OA 线程池队列容量配置错误 update: 新增供应商 HTTP 请求超时时间配置及校验 update: 使用 ScheduledExecutorService 替换 Timer 调度 update: 将 provider 重试计数改为线程隔离，并在请求完成后清理线程状态 update: Spring 上下文关闭时清理静态 ApplicationContext 引用 test: 补充 api、comm、core 和 provider 配置相关单元测试